# sova-cui

./: .gitignore  LICENSE  MANIFEST.in  README.md  install_gr.sh  install_mac_linux.sh  make.bat  make.sh  pyproject.toml  requirements.txt  requirements_py3.10.txt  requirements_py3.11-3.13.txt  requirements_py3.11.txt  run_install_mac_linux.sh  run_install_win.bat  setup.py
data/amorphous_md/: a_SiO2_speed1e14K.xyz
data/amorphous_rmc/: hg_RMC.cfg
data/crystal/: si222.cif  si333.cif  sio2_beta_cristobalite222.cif
example/: 11_ring_analysis.py  1_pdf_xyz.py  2_pdf_cif.py  3_pdf_cfg.py  4_coordination.py  4a_coordination.py  4b_coordination_neighbor.py  5_bond_angle.py  6_polyhedra.py  8_cavity.py  9_save_results.py  README.md  example1.py  example10.py  example11.py  example12.py  example13.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  readme.txt
example/data/: AlPO-17.cif
example/jupyter_notebook/: 0_all_analysis.ipynb  1_pdf_xyz.ipynb  2_pdf_cif.ipynb  3_pdf_cfg.ipynb  3_pdf_cig.ipynb  4a_coordination.ipynb  4b_coordination.ipynb  5_bond_angle.ipynb  6_polyhedra.ipynb  6_tetrahedral_order.ipynb  7_ring_analysis.ipynb  8_cavity.ipynb  9_save_results.ipynb
example/python_script/: 0_all_analysis.py  1_pdf_xyz.py  (+10 more)
example_jupyter/: example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb  example5.ipynb
external_lib/: README.md
sova/: __init__.py
sovapy/: __init__.py
src/: example11.py  example12.py  example13.py  example3.py  example5.py  example7.py  example9.py  main.py  readme.txt
(+197 files in other folders)
